reseting git tree
